<resources>
    <string name="app_name" translatable="false">LocaAutos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="type_new_email">Type new e-mail</string>
    <string name="cancelar">Cancel</string>
    <string name="type_new_user" translatable="false">Type a new user name</string>
    <string name="type_user_pwrd">Type a new password</string>
    <string name="gravar">Record</string>
    <string name="avatar">Alias</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="nome">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="resgistro_ok">Successfully Saved Data!</string>
    <string name="button_ok">Ok</string>
    <string name="descricao_veiculo">Description Vehicle</string>
    <string name="descricao">Description</string>
    <string name="marca_modelo_veiculo">Brand / Model - Vehicle</string>
    <string name="descrico_do_veiculo">Description Vehicle</string>
    <string name="novo_usuario">New User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="selecione_uma_imagem">Select a Image</string>
    <string name="voltar">Back</string>
    <string name="new_car_for_rent">New *</string>
    <string name="sign_out">Sign Out</string>
    <string name="chassi_example">Chassis: 9BWHE21JX24060960</string>
    <string name="imagem_do_veiculo">Vehicle Imagem</string>
    <string name="excluir">Delete</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="new_auto">* New</string>
    <string name="delete_itens">Delete Itens..</string>
    <string name="loca_autos" translatable="false">LOCA AUTOS</string>
    <string name="botao_lista_veiculos">List of Available Vehicles</string>
    <string name="desc_loca_autos">This app will show you a list of vehicles that are available for rental. Regardless of the operator, we will show you the vehicle title and a description that will include the location/region and contact details of the rental company. We are not responsible for any of the agreements signed between the client and the lessor, nor are we responsible for damages of any nature. We are only here as a facilitator, so take advantage and check out our list below:</string>
    <string name="sair">Go Out</string>
    <string name="pagina_principal">Início</string>
    <string name="app_name_by_jussa" translatable="false">Loca Autos... by Jussa</string>
    <string name="version">Version:</string>
    <string name="developers">Developers:</string>
    <string name="about">About</string>
    <string name="message_sucess">Record Data Sucess!</string>
    <string name="message_record_user_sucess">Record User Sucess!</string>
    <string name="message_user_input_email">Please type a e-mail! \n</string>
    <string name="message_user_input_valid_email">Please type a valid e-mail! \n</string>
    <string name="message_user_input_password">Please type a password! \n</string>
    <string name="message_user_input_password_equals_or_greather">Please type a password equals or greather than 6 digits \n</string>
    <string name="message_user_input_password_valid">Please type a record e-mail or password! \n</string>
    <string name="message_auto_input_model_vehicle">Please type a brand / model vehicle! \n</string>
    <string name="message_auto_input_image_vehicle">Please type a image vehicle! \n</string>
    <string name="message_auto_input_description_vehicle">Please type a description vehicle! \n</string>
    <string name="message_auto_input_chassi">Please type a chassi vehicle! \n</string>
    <string name="message_auto_input_chassi_valid">Please type a chassi vehicle equals or greather than 17 digits! \n</string>

</resources>