<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtLogoLocaAutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/loca_autos"
            android:textAlignment="center"
            android:textColor="@color/blue_jussa_2"
            android:textSize="52sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtDescLocaAutos"
            android:layout_width="414dp"
            android:layout_height="275dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="42dp"
            android:clickable="false"
            android:focusable="false"
            android:lines="10"
            android:maxLines="10"
            android:text="@string/desc_loca_autos"
            android:textAlignment="center"
            android:textColor="@color/blue_jussa_2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogoLocaAutos" />

        <Button
            android:id="@+id/btnOpenListAutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_lista_veiculos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtLogoLocaAutos"
            app:layout_constraintVertical_bias="0.702">

        </Button>

        <Button
            android:id="@+id/btnHomeSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="116dp"
            android:text="@string/sair"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenListAutos"
            app:layout_constraintVertical_bias="1.0">

        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>