<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgCarro"
        android:layout_width="379dp"
        android:layout_height="222dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/teal_200"
        android:src="@drawable/ic_baseline_add_photo"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChassi"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtMarcaModelo"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@color/teal_200"
        android:ems="10"
        android:hint="@string/marca_modelo_veiculo"
        android:inputType="textPersonName"
        android:textColorHint="#004D40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtChassi"
        android:layout_width="383dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:autofillHints="name"
        android:ems="17"
        android:hint="@string/chassi_example"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintTop_toBottomOf="@+id/txtMarcaModelo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtDescricaoVeiculo"
        android:layout_width="381dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:autofillHints=""
        android:background="@color/teal_200"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/descrico_do_veiculo"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#004D40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChassi"
        app:layout_constraintVertical_bias="0.865" />

    <Button
        android:id="@+id/btnGravarCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarCarro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCancelarCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:counterEnabled="true"
        app:counterMaxLength="17"
        app:counterTextAppearance="@style/counterText"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:layout_constraintBottom_toTopOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCarro">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDeleteAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarCarro"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/btnGravarCarro"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoVeiculo"
        app:layout_constraintVertical_bias="0.555" />

</androidx.constraintlayout.widget.ConstraintLayout>